# xf86-video-armsoc

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  README.md  autogen.sh  configure.ac  endless-mkpatch
debian/: armsoc.conf  changelog  control  install  rules
man/: armsoc.man  omap.man
src/: Makefile.am  armsoc_dri2.c  armsoc_driver.c  armsoc_driver.h  armsoc_dumb.c  armsoc_dumb.h  armsoc_exa.c  armsoc_exa.h  armsoc_exa_null.c  armsoc_gc.c  compat-api.h  drm_pl111_cursor.c  drmmode_display.c  drmmode_driver.h  omap_dri2.c  omap_driver.c  omap_driver.h  omap_drm.c  omap_drm.h  omap_drmif.h  omap_drmif.h.bak  omap_drmif_fb.h  omap_dumb.c  omap_dumb.h  omap_exa.c  omap_exa.h  omap_exa_common.c  omap_exa_common.h  omap_exa_null.c  omap_exa_utils.c  omap_util.h  omap_xv.c
src/drmmode_exynos/: drmmode_exynos.c
src/drmmode_meson/: drmmode_meson.c  meson_drm.h
src/drmmode_pl111/: drmmode_pl111.c
src/drmmode_template/: drmmode_template.c
